# project

./: README.md  app.py  main.py  pyproject.toml  rag_engine.py  requirements.txt  ui_components.py
chroma_db/: chroma.sqlite3
