[project]
name = "rag-annual-report-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.65.0",
    "dotenv>=0.9.9",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "pdfplumber>=0.11.8",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "tiktoken>=0.12.0",
]
